# VkCompute

./: .gitignore  .gitmodules  CMakeLists.txt
application/: CMakeLists.txt  application.cpp  application.h  debug_info.h  forward_application.cpp  forward_application.h  graphics_application.cpp  graphics_application.h
application/base/: background.h  debug_info.cpp  layer.h  singleton.h  update_flag.cpp  update_flag.h  update_flag_manager.cpp  update_flag_manager.h
application/components/: camera.cpp  camera.h  mesh_renderer.cpp  mesh_renderer.h  renderer.cpp  renderer.h  script.cpp  script.h  transform.cpp  transform.h
application/controls/: free_control.cpp  free_control.h  orbit_control.cpp  orbit_control.h  spherical.cpp  spherical.h
application/ecs/: component.cpp  component.h  components_manager.cpp  components_manager.h  entity.cpp  entity.h  scene.cpp  scene.h  scene_manager.cpp  scene_manager.h
application/light/: ambient_light.cpp  ambient_light.h  direct_light.cpp  direct_light.h  light.cpp  light.h  light_manager.cpp  light_manager.h  point_light.cpp  point_light.h  spot_light.cpp  spot_light.h
application/material/: base_material.cpp  base_material.h  material.cpp  material.h  unlit_material.cpp  unlit_material.h
application/mesh/: buffer_mesh.cpp  buffer_mesh.h  index_buffer_binding.cpp  index_buffer_binding.h  mesh.cpp  mesh.h  mesh_attributes.h  mesh_manager.cpp  mesh_manager.h  model_mesh.cpp  model_mesh.h  primitive_mesh.cpp  primitive_mesh.h  sub_mesh.cpp  sub_mesh.h
application/shader/: internal_variant_name.h  shader_manager.cpp  shader_manager.h
application/subpasses/: geometry_subpass.cpp  geometry_subpass.h  render_element.cpp  render_element.h
application/texture/: astc.cpp  astc.h  ktx.cpp  ktx.h  stb.cpp  stb.h  texture.cpp  texture.h  texture_manager.cpp  texture_manager.h
application/ui/: imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h  ui_manager.cpp  ui_manager.h
cuda/: CMakeLists.txt  SineWaveSimulation.cu  SineWaveSimulation.h  builtin.h  cuda_device.h  cuda_external_buffer.cpp  cuda_external_buffer.h  cuda_external_semaphore.cpp  cuda_external_semaphore.h  cuda_stream.cpp  cuda_stream.h  exports.h  linmath.h  monte_carlo_pi.h  sine_wave_simulation.cu  sine_wave_simulation.h  warp.h
cuda/core/: cuda_device.cpp  cuda_device.h  cuda_external_buffer.cpp  cuda_external_buffer.h  cuda_external_semaphore.h
cuda/math/: array.h  bounds.h  constant.h  crt.cpp  crt.h  cuda_math_utils.cpp  cuda_math_utils.h  initializer_array.h  intersect.h  intersect_adj.h  intersect_tri.h  mat.h  math_core.h  math_utils.h  matnn.h  noise.h  quat.h  rand.h  range.h  solid_angle.h  spatial.h  svd.h  temp.cu  vec.h
cuda/solver/: monte_carlo_pi.cu  monte_carlo_pi.h  sine_wave_simulation.h
cuda/structure/: bvh.cpp  bvh.cu  bvh.h  cuda_context.cpp  cuda_context.cu  cuda_context.h  cuda_util.cpp  cuda_util.h  hashgrid.cpp  hashgrid.cu  hashgrid.h  marching.cu  marching.h  mesh.cpp  mesh.cu  mesh.h  reduce.cpp  reduce.cu  reduce.h  runlength_encode.cpp  runlength_encode.cu  runlength_encode.h  scan.cpp  scan.cu  scan.h  sort.cpp  sort.cu  sort.h  sparse.cpp  sparse.cu  sparse.h  temp_buffer.h
cuda/utils/: helper_cuda.h  helper_multiprocess.cpp  helper_multiprocess.h  helper_string.h
framework/: CMakeLists.txt  buffer_pool.cpp  buffer_pool.h  debug_info.cpp  debug_info.h  fence_pool.cpp  fence_pool.h  glsl_compiler.cpp  glsl_compiler.h  resource_binding_state.cpp  resource_binding_state.h  resource_cache.cpp  resource_cache.h  resource_record.cpp  resource_replay.cpp  semaphore_pool.h  timer.h
framework/common/: error.cpp  error.h  filesystem.cpp  filesystem.h  glm_common.h  glsl_compiler.cpp  glsl_compiler.h  helpers.h  hpp_resource_caching.h  logging.h  resource_caching.h  strings.cpp  strings.h  tags.h  utils.cpp  utils.h  vk_common.cpp  vk_common.h  vk_initializers.h
framework/compute/: buffer_utils.cpp  buffer_utils.h  compute_context.cpp  compute_context.h  compute_pass.cpp  compute_pass.h  compute_resource.cpp  compute_resource.h  data_type_util.cpp  data_type_util.h  image_utils.cpp  image_utils.h  status_util.cpp  status_util.h
framework/core/: acceleration_structure.cpp  acceleration_structure.h  barrier.cpp  barrier.h  buffer.cpp  buffer.h  buffer_pool.cpp  buffer_pool.h  command_buffer.cpp  command_buffer.h  command_pool.cpp  command_pool.h  debug.cpp  debug.h  debug_info.h  descriptor_pool.cpp  descriptor_pool.h  descriptor_set.cpp  descriptor_set.h  descriptor_set_layout.cpp  descriptor_set_layout.h  device.cpp  device.h  fence_pool.cpp  fence_pool.h  frame_resource.cpp  frame_resource.h  framebuffer.cpp  framebuffer.h  image.cpp  image.h  image_view.cpp  image_view.h  instance.cpp  instance.h  physical_device.cpp  physical_device.h  pipeline.cpp  pipeline.h  pipeline_layout.cpp  (+40 more)
framework/cuda-interop/: VulkanBaseApp.cpp  VulkanBaseApp.h  main.cpp
framework/fg/: common.h  framegraph.cpp  framegraph.h  realize.h  render_task.h  render_task_base.h  render_task_builder.h  resource.h  resource_base.h  transient_resource_cache.cpp  transient_resource_cache.h  vk_resource.cpp  vk_resource.h
framework/platform/: application.cpp  application.h  configuration.cpp  configuration.h  filesystem.cpp  filesystem.h  glfw_window.cpp  glfw_window.h  headless_window.cpp  headless_window.h  input_events.cpp  input_events.h  parser.cpp  parser.h  platform.cpp  platform.h  window.cpp  window.h
framework/rendering/: framebuffer.cpp  framebuffer.h  pipeline_state.cpp  subpass.h  (+22 more)
test.math/: CMakeLists.txt  bounding_box2_tests.cpp  bounding_box3_tests.cpp  bounding_box_tests.cpp  bounding_frustum_tests.cpp  collision_util_tests.cpp  color_tests.cpp  math_utils_tests.cpp  matrix2x2_tests.cpp  matrix3x3_tests.cpp  matrix4x4_tests.cpp  matrix_tests.cpp  point2_tests.cpp  point3_tests.cpp  point_tests.cpp  quaternion_tests.cpp  ray2_tests.cpp  ray3_tests.cpp  transform2_tests.cpp  transform3_tests.cpp  unit_tests_utils.cpp  unit_tests_utils.h  vector2_tests.cpp  vector3_tests.cpp  vector4_tests.cpp  vector_tests.cpp
(+171 files in other folders)
